# tradeMatchingEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: TradeEngine.cc  TradeEngine.hpp  main.cc
tests/: CMakeLists.txt  test_trading_engine.cpp
